# microbit-dsp-spectrum-analyzer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  arm-gcc-toolchain.cmake  dev
.githooks/: pre-commit
.github/workflows/: ci.yaml
scripts/: ci-check-format.sh  dev-format.sh  dev-setup.sh  dev-test.sh
src/app/: audio_task.cpp  logger.cpp  main.cpp  screen_refresh.cpp
src/app/include/: app_task.h  audio_task.h  logger.h  screen_refresh.h
src/drivers/: audio_capture.cpp  led_matrix.cpp
src/drivers/include/: audio_capture.h  led_matrix.h
src/dsp/: window_hann.cpp  window_hann.h
src/platform/: handlers.c  linker.ld  mem.c  startup.s
src/platform/include/: button_hw.h  led__matrix.h  microbit_ver_2.h  uart_hw.h
src/rtos/: heap_4.c  hooks.c
src/rtos/include/: FreeRTOSConfig.h
tests/: test_main.c
